Prevent short genotype descriptions from wrapping
Refs #219

--- a/frontend/src/app/annotation-table-summary/annotation-table-summary.component.css
+++ b/frontend/src/app/annotation-table-summary/annotation-table-summary.component.css
@@ -29,10 +29,11 @@
 }
 
 .summary-extension {
+  width: 90%;
   padding-left: 20px;
 }
 
 .summary-feature {
-  width: 5%;
+  width: 10%;
   padding-left: 20px;
 }
