--- a/frontend/src/app/genotype-link/genotype-link.component.css
+++ b/frontend/src/app/genotype-link/genotype-link.component.css
@@ -1,3 +1,3 @@
-.genotype-link {
-/*  white-space: nowrap;  */
+.short-genotype-link {
+  white-space: nowrap;
 }
